Fixed paths and removed extraneous files

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "calculator-app",
-  "homepage": "jaytrask.github.io/ReactCalculator",
+  "homepage": "https://jaytrask.github.io/ReactCalculator/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
